--- a/requirements.txt
+++ b/requirements.txt
@@ -19,4 +19,6 @@ requests-oauthlib==0.8.0
 six==1.11.0
 urllib3==1.22
 django-cors-headers==2.2.0
+fuzzywuzzy==0.16.0
+python-Levenshtein==0.12.0
 #xmtodict==0.11.0
