--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,45 @@
+beautifulsoup4==4.6.3
+boto3==1.9.10
+botocore==1.12.10
+bs4==0.0.1
+cachetools==2.1.0
 certifi==2018.4.16
 chardet==3.0.4
 defusedxml==0.5.0
 Django==2.0.5
 django-allauth==0.36.0
+django-cors-headers==2.2.0
+django-filter==2.0.0
 django-rest-auth==0.9.3
 django-sslserver==0.20
 djangorestframework==3.8.2
 djangorestframework-jwt==1.11.0
+docutils==0.14
+fuzzywuzzy==0.16.0
+google-api-core==1.4.0
+google-auth==1.5.1
+google-cloud-language==1.0.2
+googleapis-common-protos==1.5.3
+grpcio==1.15.0
 idna==2.6
+jmespath==0.9.3
+lxml==4.2.3
 oauthlib==2.1.0
 Pillow==5.1.0
+pkg-resources==0.0.0
+protobuf==3.6.1
 psycopg2==2.7.4
+pyasn1==0.4.4
+pyasn1-modules==0.2.2
 PyJWT==1.6.4
+python-dateutil==2.7.3
+python-Levenshtein==0.12.0
 python3-openid==3.1.0
 pytz==2018.4
 requests==2.18.4
 requests-oauthlib==0.8.0
+rsa==4.0
+s3transfer==0.1.13
 six==1.11.0
 urllib3==1.22
-django-cors-headers==2.2.0
-fuzzywuzzy==0.16.0
-python-Levenshtein==0.12.0
-lxml==4.2.3
-django-filter==2.0.0
-requests==2.18.4
-google-cloud-language==1.0.2
-#xmtodict==0.11.0
+xmltodict==0.11.0
