--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ Pillow==5.1.0
 pkg-resources==0.0.0
 protobuf==3.6.1
 psycopg2==2.7.4
+pyactiveresource==2.1.2
 pyasn1==0.4.4
 pyasn1-modules==0.2.2
 PyJWT==1.6.4
@@ -36,10 +37,12 @@ python-dateutil==2.7.3
 python-Levenshtein==0.12.0
 python3-openid==3.1.0
 pytz==2018.4
+PyYAML==3.13
 requests==2.18.4
 requests-oauthlib==0.8.0
 rsa==4.0
 s3transfer==0.1.13
+ShopifyAPI==3.1.0
 six==1.11.0
 stripe==2.11.0
 urllib3==1.22
