--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-allauth==0.36.0
 django-cors-headers==2.2.0
 django-filter==2.0.0
 django-rest-auth==0.9.3
+django-smtp-ssl==1.0
 django-sslserver==0.20
 djangorestframework==3.8.2
 djangorestframework-jwt==1.11.0
