--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ jmespath==0.9.3
 lxml==4.2.3
 oauthlib==2.1.0
 Pillow==5.1.0
-pkg-resources==0.0.0
+# pkg-resources==0.0.0
 protobuf==3.6.1
 psycopg2==2.7.4
 pyactiveresource==2.1.2
