--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,97 @@
+asn1crypto==0.24.0
+awscli==1.15.30
 beautifulsoup4==4.6.3
 boto3==1.9.10
 botocore==1.12.10
 bs4==0.0.1
 cachetools==2.1.0
 certifi==2018.4.16
+cffi==1.11.5
 chardet==3.0.4
+colorama==0.3.9
+coreapi==2.3.3
+coreschema==0.0.4
+crypto==1.4.1
+cryptography==2.2.2
 defusedxml==0.5.0
+dj-database-url==0.3.0
 Django==2.0.5
 django-allauth==0.36.0
 django-cors-headers==2.2.0
+django-extensions==2.1.3
 django-filter==2.0.0
+django-jet==1.0.7
+django-modelcluster==4.1
 django-rest-auth==0.9.3
 django-smtp-ssl==1.0
 django-sslserver==0.20
+django-taggit==0.22.2
+django-treebeard==4.3
 djangorestframework==3.8.2
 djangorestframework-jwt==1.11.0
 docutils==0.14
+draftjs-exporter==2.1.2
+drfdocs==0.0.11
+elasticsearch==6.3.1
+elasticsearch-dsl==6.2.1
 fuzzywuzzy==0.16.0
+geoip2==2.9.0
 google-api-core==1.4.0
+google-api-python-client==1.4.1
 google-auth==1.5.1
 google-cloud-language==1.0.2
 googleapis-common-protos==1.5.3
 grpcio==1.15.0
+gunicorn==19.6.0
+html5lib==1.0.1
+httplib2==0.11.3
 idna==2.6
+ipaddress==1.0.22
+itypes==1.1.0
+Jinja2==2.10
 jmespath==0.9.3
+l18n==2016.6.4
 lxml==4.2.3
+MarkupSafe==1.1.0
+maxminddb==1.4.1
+model-mommy==1.6.0
+Naked==0.1.31
+names==0.3.0
+oauth2client==4.1.2
 oauthlib==2.1.0
+openapi-codec==1.3.2
 Pillow==5.1.0
-# pkg-resources==0.0.0
 protobuf==3.6.1
 psycopg2==2.7.4
 pyactiveresource==2.1.2
 pyasn1==0.4.4
 pyasn1-modules==0.2.2
+pycparser==2.18
 PyJWT==1.6.4
+pyOpenSSL==18.0.0
+PyPDF2==1.26.0
 python-dateutil==2.7.3
 python-Levenshtein==0.12.0
 python3-openid==3.1.0
 pytz==2018.4
 PyYAML==3.13
+reportlab==3.5.9
 requests==2.18.4
 requests-oauthlib==0.8.0
 rsa==4.0
 s3transfer==0.1.13
+selenium==3.13.0
+shellescape==3.4.1
 ShopifyAPI==3.1.0
+simplejson==3.16.0
 six==1.11.0
 stripe==2.11.0
+Unidecode==0.4.21
+uritemplate==3.0.0
 urllib3==1.22
+wagtail==2.1
+webencodings==0.5.1
+whitenoise==3.2
+Willow==1.1
+xhtml2pdf==0.2.3
 xmltodict==0.11.0
